<resources>
    <string name="app_name">农商行智能管理终端</string>


    <string name="library_not_found">未找到库文件，请检查是否有将.so文件放至工程的 app\\src\\main\\jniLibs 目录下</string>
    <string name="permission_denied">权限被拒绝！</string>
    <string name="active_success">激活引擎成功</string>
    <string name="already_activated">引擎已激活，无需再次激活</string>
    <string name="active_failed">引擎激活失败，错误码为 %d</string>
    <string name="init_failed">引擎初始化失败，错误码为 %d</string>

    <string name="recognize_failed_notice">未通过:%s</string>
    <string name="recognize_success_notice">通过:%s</string>
    <string name="low_confidence_level">人脸置信度低</string>
    <string name="specific_engine_init_failed">%s 初始化失败，错误码为:%d</string>
    <string name="rank">第%s名</string>
    <string name="passenger">相比前一天%s/%s</string>
    <string name="version">V%s</string>
    <string name="main_home_title">徐汇区南京路支行智能终端</string>
    <string name="main_home_name">上海农商银行</string>
    <string name="main_home_logs">SRCB</string>
    <string name="sign_same_day">当日打卡人数</string>
    <string name="network_ranking">网点排名</string>
    <string name="passenger_flow_volume_today">今日客流数量</string>
    <string name="person_times">人次</string>
    <string name="compared_day_before">相比前一天%s/%s</string>
    <string name="compare">%s%%</string>
    <string name="security_people_number">安保运营人数：%s人</string>
    <string name="security_region">安保运营区域：%s个</string>
    <string name="main_notice_title">通知通告</string>
    <string name="main_escort_vehicle">押运车辆</string>
    <string name="main_escort_vehicle_day">当日押运车辆</string>
    <string name="main_escort_day">当日押运人员</string>
    <string name="main_navigation_menu">导航菜单</string>
    <string name="main_video_window">视频窗口</string>
    <string name="main_staff_style">员工风采</string>
    <string name="main_punch_record">打卡记录</string>
    <string name="clock_in_success">上班打卡成功</string>
    <string name="clock_out_success">下班打卡成功</string>
    <string name="main_new_personnel_steps">人员新增步骤</string>
    <string name="swipe_id_card">1、刷身份证</string>
    <string name="face_capture">2、人脸抓拍</string>
    <string name="verification">3、人证合一验证</string>
    <string name="save">保存</string>
    <string name="employee_file">员工档案</string>
    <string name="main_name">姓名：</string>
    <string name="main_sex">性别：</string>
    <string name="main_number">工号：</string>
    <string name="main_department">部门：</string>
    <string name="main_positions">职务：</string>
    <string name="jurisdiction">权&#12288;&#12288;限：</string>
    <string name="nation">民&#12288;&#12288;&#12288;族：</string>
    <string name="please_input">请输入</string>
    <string name="company">单&#12288;&#12288;位：</string>
    <string name="id_card_address">身份证地址：</string>
    <string name="phone">联系电话：</string>
    <string name="date_birth">出&#8197;生&#8197;日&#8197;期：&#8197;</string>
    <string name="political_outlook">政治面貌：</string>
    <string name="id_card_number">身份证号码：</string>
    <string name="main_id_card_name">姓&#12288;名</string>
    <string name="main_id_card_sex">姓&#12288;别</string>
    <string name="main_id_card_nation">民&#12288;族</string>
    <string name="main_id_card_birth">出&#12288;生</string>
    <string name="main_id_card_address">住&#12288;址</string>
    <string name="main_id_card_number">公&#8197;民&#8197;身&#8197;份&#8197;证&#8197;号&#8197;码</string>
    <string name="main_equipment_status">设备状态</string>
    <string name="diagnosis_record">诊断记录</string>
    <string name="main_device_status">设备状态</string>
    <string name="main_device_name">设备名称</string>
    <string name="main_diagnosis_content">诊断内容</string>
    <string name="main_network_connectivity">网络连通性</string>
    <string name="main_diagnosis_date">诊断时间</string>
    <string name="main_video_results">录像结果</string>
    <string name="main_click">点击</string>
    <string name="main_show_video_status">可以查看录像状态</string>
    <string name="main_passenger_flow">近七日客流趋势图</string>
    <string name="main_passenger_flow_trend_chart">客流趋势图</string>
    <string name="branch_operate_title">农商行网点</string>
    <string name="main_front_passenger">前一日客流</string>
    <string name="main_month_passenger">上月同天客流</string>
    <string name="main_month_all_passenger">上月日均客流</string>
    <string name="main_front_season_passenger">上季日均客流</string>
    <string name="passenger_flow_day">当日客流</string>
    <string name="main_many_visits">多次到访</string>
    <string name="main_person_times">人次</string>
    <string name="main_vip">VIP&#8197;到访</string>
    <string name="main_daily_security_operation_trend_chart">当日安保运营趋势图</string>
    <string name="main_security_operation_route">安保运营路线</string>
    <string name="main_security_operation_records">历史运营记录</string>
    <string name="main_trend_chart_daily_records">当日进出记录趋势图</string>
    <string name="main_real_time_access_record">实时进出记录</string>
    <string name="main_historical_access_records">历史进出记录</string>
    <string name="main_search">搜索</string>
    <string name="main_regulations_list">规则制度列表</string>
    <string name="escort_today">今日押运</string>
    <string name="escort_car">押运车辆：</string>
    <string name="estimated_time_of_arrival">预计到达时间：</string>
    <string name="estimated_time_of_arrival_">预计到达时间</string>
    <string name="escort_person">押运人员：</string>
    <string name="branch_handover_personnel">网点交接人员：</string>
    <string name="escort_status">押运状态：</string>
    <string name="escort_route">押运路线</string>
    <string name="current_location">当前位置</string>
    <string name="main_manual_tasks">手动任务</string>
    <string name="main_plan_tasks">计划任务</string>
    <string name="main_task_name">任务名称</string>
    <string name="main_start_time">开始时间</string>
    <string name="main_end_time">结束时间</string>
    <string name="main_task_status">任务状态</string>
    <string name="main_record_name">录像名称</string>
    <string name="main_record_status">录像状态</string>
</resources>
