<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <TextView
        style="@style/main_device_status_tv"
        android:text="@string/main_device_status" />

    <TextView
        style="@style/main_device_status_tv"
        android:text="@string/main_device_name" />

    <TextView
        style="@style/main_device_status_tv"
        android:gravity="center"
        android:text="@string/main_diagnosis_content" />

    <TextView
        style="@style/main_device_status_tv"
        android:gravity="center"
        android:text="@string/main_network_connectivity" />

    <TextView
        style="@style/main_device_status_tv"
        android:text="@string/main_diagnosis_date" />

    <TextView
        style="@style/main_device_status_tv"
        android:gravity="center"
        android:text="@string/main_video_results" />
</LinearLayout>